# viagoscrap

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  compose.debug.yaml  compose.yaml  pyproject.toml
src/: main.py
src/viagoscrap/: cli.py  config.py  notifier.py  scraper.py  storage.py  tracker.py  webapp.py
tests/: test_config.py  test_scraper.py  test_tracker.py
