[project]
name = "viagoscrap"
version = "0.1.0"
description = "Scraper Viagogo en Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.52.0",
  "python-dotenv>=1.0.1",
]

[project.scripts]
viagoscrap = "viagoscrap.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
